# deeppanel

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
deeppanel/: __init__.py
deeppanel/benchmarks/: __init__.py  ar.py  linear_panel.py  pvar.py
deeppanel/datasets/: __init__.py  simulate.py
deeppanel/evaluation/: __init__.py  dm.py  fluctuation.py  metrics.py
deeppanel/forecast/: __init__.py  rolling.py
deeppanel/inference/: __init__.py  conformal.py  partial.py  poolability.py
deeppanel/models/: __init__.py  classo.py  deep_pooled.py  ldpm.py  mlp.py
deeppanel/surrogate/: __init__.py  augment.py  embeddings.py
deeppanel/training/: __init__.py  cv.py  normalize.py  trainer.py
deeppanel/utils/: __init__.py  panel.py
deeppanel/viz/: __init__.py  plots.py  style.py  tables.py
docs/: PAPER_COMPATIBILITY.md  USAGE.md  deeppanel_tutorial.ipynb  index.html
docs/tables/: tab_conformal.csv  tab_conformal.html  tab_conformal.md  tab_data_summary.csv  tab_data_summary.html  tab_data_summary.md  tab_dm.csv  tab_dm.html  tab_dm.md  tab_forecast_pooled.csv  tab_forecast_pooled.html  tab_forecast_pooled.md  tab_groups.csv  tab_groups.html  tab_groups.md  tab_marginal_effects.csv  tab_marginal_effects.html  tab_marginal_effects.md  tab_poolability.csv  tab_poolability.html  tab_poolability.md  tab_rmse.csv  tab_rmse.html  tab_rmse.md
examples/: 01_deep_pooled_forecasting.py  02_partial_derivatives_poolability.py  03_ldpm_conformal.py
tests/: test_estimators.py  test_inference_eval.py  test_models_core.py  test_panel.py
